--- a/composer.json
+++ b/composer.json
@@ -4,12 +4,23 @@
     "type": "library",
     "require": {
         "prettus/l5-repository": "^2.6",
-        "intervention/image": "^2.5"
+        "knovators/support": "1.*",
+        "knovators/image-resize": "1.*"
     },
     "minimum-stability": "dev",
     "autoload": {
         "psr-4": {
             "Knovators\\Media\\": "src/"
         }
-    }
+    },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "git@git.knovator.in:knovators/support.git"
+        },
+        {
+            "type": "vcs",
+            "url": "git@git.knovator.in:knovators/image-resize.git"
+        }
+    ]
 }
