--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,8 @@
   "require": {
     "prettus/l5-repository": "^2.6",
     "intervention/image": "^2.5",
-    "knovators/support": "^1.*",
-    "knovators/image-resize": "^1.*"
+    "knovators/support": "1.*",
+    "knovators/image-resize": "1.*"
   },
   "minimum-stability": "dev",
   "prefer-stable": true,
