--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,8 @@
   "require": {
     "prettus/l5-repository": "^2.6",
     "intervention/image": "^2.5",
-    "knovators/support": "1.*",
-    "knovators/image-resize": "1.*"
+    "knovators/support": "^1.4",
+    "knovators/image-resize": "^1.1"
   },
   "minimum-stability": "dev",
   "prefer-stable": true,
@@ -14,5 +14,15 @@
     "psr-4": {
       "Knovators\\Media\\": "src/"
     }
-  }
+  },
+  "repositories": [
+    {
+      "type": "vcs",
+      "url": "git@git.knovator.in:knovators/support.git"
+    },
+    {
+      "type": "vcs",
+      "url": "git@git.knovator.in:knovators/image-resize.git"
+    }
+  ]
 }
