--- a/composer.json
+++ b/composer.json
@@ -3,10 +3,10 @@
   "description": "This is media module description",
   "type": "library",
   "require": {
-    "prettus/l5-repository": "^2.6",
-    "knovators/support": "1.*",
-        "knovators/image-resize": "1.*",
-        "yajra/laravel-datatables-oracle": "^9.0"
+    "prettus/l5-repository": "~2.6",
+    "knovators/support": "~1.4",
+    "knovators/image-resize": "~1.0",
+    "yajra/laravel-datatables-oracle": "~9.0"
   },
   "minimum-stability": "dev",
   "autoload": {
