--- a/composer.json
+++ b/composer.json
@@ -1,27 +1,27 @@
 {
-  "name": "knovators/media",
+  "name": "knovator/media",
   "description": "This is media module description",
   "type": "library",
   "require": {
     "prettus/l5-repository": "~2.6",
-    "knovators/support": "~1.4",
-    "knovators/image-resize": "~1.0",
+    "knovator/support": "~1.4",
+    "knovator/image-resize": "~1.0",
     "yajra/laravel-datatables-oracle": "~9.0"
   },
   "minimum-stability": "dev",
   "autoload": {
     "psr-4": {
-      "Knovators\\Media\\": "src/"
+      "Knovator\\Media\\": "src/"
     }
   },
     "repositories": [
         {
             "type": "vcs",
-            "url": "git@git.knovator.in:knovators/support.git"
+            "url": "git@github.com:knovator/support.git"
         },
         {
             "type": "vcs",
-            "url": "git@git.knovator.in:knovators/image-resize.git"
+            "url": "git@github.com:knovator/image-resize.git"
         }
     ]
 }
